update object treatmant page

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -138,6 +138,8 @@
 @import "./components/object/object-popup-booking";
 @import "./components/object/object-no-available";
 @import "./components/object/object-sanatorium";
+@import "./components/object/object-treatment";
+
 
 
 @import "./components/object-booking/object-booking";
