--- a/src/views/components/object/object-description.pug
+++ b/src/views/components/object/object-description.pug
@@ -197,5 +197,5 @@
               .object-description__text
                 p Круглогодично
       
-        button.object-description__button(type="button")
+        button.object-description__button.object-description__button--wide(type="button")
           span Свернуть описание
