--- a/src/views/components/object/object-sidebar.pug
+++ b/src/views/components/object/object-sidebar.pug
@@ -1,75 +1,5 @@
 aside.object-sidebar
   .object-sidebar__wrapper
-    .object-sidebar__blocks.object-sidebar__blocks--small
-      svg.object-sidebar__svg(width="112" height="106" viewBox="0 0 112 106")
-        use(xlink:href="#svg-object-horn") 
-      .object-sidebar__content
-        .object-sidebar__status Акция
-        .object-sidebar__description <a href="#">Смотреть</a> действующие акции
-          span 2
-    .object-sidebar__blocks
-      .object-sidebar__block
-        h3.object-sidebar__title Основные профили лечения
-        ul.object-sidebar__list
-          li
-            svg(width="20" height="20" viewBox="0 0 20 20")
-              use(xlink:href="#svg-object-approve") 
-            span ЛОР органы
-          li 
-            svg(width="20" height="20" viewBox="0 0 20 20")
-              use(xlink:href="#svg-object-approve") 
-            span Сердечно-сосудистая система
-          li 
-            svg(width="20" height="20" viewBox="0 0 20 20")
-              use(xlink:href="#svg-object-approve")
-            span Нервная система
-          li 
-            svg(width="20" height="20" viewBox="0 0 20 20")
-              use(xlink:href="#svg-object-approve")
-            span Опорно-двигательный аппарат
-          li 
-            svg(width="20" height="20" viewBox="0 0 20 20")
-              use(xlink:href="#svg-object-approve")
-            span Органы дыхания
-          li
-            svg(width="20" height="20" viewBox="0 0 20 20")
-              use(xlink:href="#svg-object-approve")
-            span Covid-19
-      .object-sidebar__block
-        h3.object-sidebar__title Дополнительные профили
-        ul.object-sidebar__list
-          li
-            svg(width="20" height="20" viewBox="0 0 20 20")
-              use(xlink:href="#svg-object-approve") 
-            span Болезни мужской половой сферы
-          li 
-            svg(width="20" height="20" viewBox="0 0 20 20")
-              use(xlink:href="#svg-object-approve") 
-            span Гинекология
-          li 
-            svg(width="20" height="20" viewBox="0 0 20 20")
-              use(xlink:href="#svg-object-approve")
-            span Заболевания эндокринной системы
-          li 
-            svg(width="20" height="20" viewBox="0 0 20 20")
-              use(xlink:href="#svg-object-approve")
-            span ЛОР органы
-          li 
-            svg(width="20" height="20" viewBox="0 0 20 20")
-              use(xlink:href="#svg-object-approve")
-            span Нарушение обмена веществ
-          li
-            svg(width="20" height="20" viewBox="0 0 20 20")
-              use(xlink:href="#svg-object-approve")
-            span Офтальмология
-        .object-sidebar__links
-          a.object__link.object__link--blue(href="#")
-            span Подробнее о лечении
-
-    .object-sidebar__blocks
-      .object-sidebar__item
-        h3.object-sidebar__title Документы для заселения
-        p.object-sidebar__text <span>Внимательно</span> изучите список документов, которые Вам потребуются для проживания
-        .object-sidebar__links
-          a.object__link.object__link--blue(href="#")
-            span Смотреть список документов
+    include ./object-sidebar-discounts
+    include ./object-sidebar-main
+    include ./object-sidebar-documents
