--- a/src/views/components/object/object-description-two.pug
+++ b/src/views/components/object/object-description-two.pug
@@ -1,98 +1,30 @@
 
 .object-description
-  .object-description__wrapper
+  .object-description__wrapper.object-description__wrapper--gap
     .object-description__container
       .object-description__blocks
         .object-description__block
-          .object-description__content
-            h3 Основные профили лечения
-            .object-description__description
-              ul.object-description__check
-                li
-                  svg(width="20" height="20" viewBox="0 0 20 20")
-                    use(xlink:href="#svg-object-approve")  
-                  span ЛОР органы
-                li
-                  svg(width="20" height="20" viewBox="0 0 20 20")
-                    use(xlink:href="#svg-object-approve")
-                  span Сердечно-сосудистая система
-                li
-                  svg(width="20" height="20" viewBox="0 0 20 20")
-                    use(xlink:href="#svg-object-approve") 
-                  span Нервная система
-                li 
-                  svg(width="20" height="20" viewBox="0 0 20 20")
-                    use(xlink:href="#svg-object-approve")
-                  span Опорно-двигательный аппарат
-                li
-                  svg(width="20" height="20" viewBox="0 0 20 20")
-                    use(xlink:href="#svg-object-approve")
-                  span Органы дыхания
-                li
-                  svg(width="20" height="20" viewBox="0 0 20 20")
-                    use(xlink:href="#svg-object-approve")
-                  span Covid-19
-                li
-                  svg(width="20" height="20" viewBox="0 0 20 20")
-                    use(xlink:href="#svg-object-approve")
-                  span Почки и урология
-                li
-                  svg(width="20" height="20" viewBox="0 0 20 20")
-                    use(xlink:href="#svg-object-approve")
-                  span Кожные заболевания
-        .object-description__block
-          .object-description__content
-            h3 Дополнительные профили лечения
-            .object-description__description
-              ul.object-description__check
-                li
-                  svg(width="20" height="20" viewBox="0 0 20 20")
-                    use(xlink:href="#svg-object-approve")  
-                  span Болезни мужской половой сферы
-                li
-                  svg(width="20" height="20" viewBox="0 0 20 20")
-                    use(xlink:href="#svg-object-approve")
-                  span Гинекология
-                li
-                  svg(width="20" height="20" viewBox="0 0 20 20")
-                    use(xlink:href="#svg-object-approve") 
-                  span Заболевания эндокринной системы
-                li 
-                  svg(width="20" height="20" viewBox="0 0 20 20")
-                    use(xlink:href="#svg-object-approve")
-                  span ЛОР органы
-                li
-                  svg(width="20" height="20" viewBox="0 0 20 20")
-                    use(xlink:href="#svg-object-approve")
-                  span Нарушение обмена веществ
-                li
-                  svg(width="20" height="20" viewBox="0 0 20 20")
-                    use(xlink:href="#svg-object-approve")
-                  span Офтальмология
-      
-      .object-description__blocks
-        .object-description__block
-          .object-description__content
+          .object-description__content.object-description__content--half
             h3 Минимальный срок путевки
             .object-description__description
               .object-description__text
                 p Без лечения - от 3 ночей, с лечением - от 7 ночей, Путешествие в лето (с лечением) - от 7 ночей, Путешествие в лето (без лечения) - от 2 ночей. Программы Детокс, Спа - от 7 ночей. Мужское здоровье, Идеальная линия - 14 ночей.
-        .object-description__block
-          .object-description__content
+          .object-description__content.object-description__content--half
             h3 Санаторно-курортная карта
             .object-description__description
               .object-description__text
-                p Входит в стоимость. С подогреваемой, морской водой, оборудован, размером 20*15 метров. Время посещения: с 9:00 до 20:00. Четверг - санитарный день. Работает с 1 мая по 30 сентября. В зависимости от погодных условий период работы бассейна может меняться.
-      
+                p Возможно оформить на месте, за дополнительную плату (если необходимо лечение, стоимость оформления от 2500 руб.). Оформление занимает до 5 дней, во время которых лечение не предоставляется. Результат флюорографии иметь обязательно.
+        button.object-description__button(type="button")
+          span Лечебные программы в санатории
+
       .object-description__blocks
         .object-description__block
-          .object-description__content
+          .object-description__content.object-description__content--half
             h3 Минимальный возраст лечения детей
             .object-description__description
               .object-description__text
                 p 4 года, Программа Detox / СПА / Идеальная линия / Мужское здоровье - с 16 лет
-        .object-description__block
-          .object-description__content
+          .object-description__content.object-description__content--half
             h3 Максимальный возраст отдыхающих
             .object-description__description
               .object-description__text
@@ -106,12 +38,38 @@
               .object-description__text
                 p Лечебные процедуры предоставляются ежедневно, без выходных.
 
-      .object-description__blocks.object-description__blocks--wide
+    .object-description__container
+      .object-description__blocks
         .object-description__block
           .object-description__content
-            h3 Описание лечения
+            h3 Минимальный срок путевки
             .object-description__description
-              .object-description__text.object-description-line__text
-                p <span>ООО «Санаторно-курортный комплекс «Знание»</span> — это санаторий современного типа, имеющий 3 звезды и работающий на основе современных медицинских технологиях, позволяющих проводить высокоэффективное восстановительное лечение больных с заболеваниями: органов кровообращения, периферической и центральной нервной системы, опорно-двигательного аппарата. Но при наличии других, непрофильных, сопутствующих заболеваний (гинекологических, кожных, болезней обмены веществ), проводится их терапия.
-                p <span>ООО «Санаторно-курортный комплекс «Знание»</span> — это санаторий современного типа, имеющий 3 звезды и работающий на основе современных медицинских технологиях, позволяющих проводить высокоэффективное восстановительное лечение больных с заболеваниями: органов кровообращения, периферической и центральной нервной системы, опорно-двигательного аппарата. Но при наличии других, непрофильных, сопутствующих заболеваний (гинекологических, кожных, болезней обмены веществ), проводится их терапия.
-              button.object-description-line__button(type="button") Развернуть описание
+              .object-description__text.object-description__text--no-gap
+                p ООО «Санаторно-курортный комплекс «Знание» — это санаторий современного типа, имеющий 3 звезды и работающий на основе современных медицинских технологиях, позволяющих проводить высокоэффективное восстановительное лечение больных с заболеваниями: органов кровообращения, периферической и центральной нервной системы, опорно-двигательного аппарата. Но при наличии других, непрофильных, сопутствующих заболеваний (гинекологических, кожных, болезней обмены веществ), проводится их терапия.
+                p В прекрасно оборудованном лечебно-диагностическом корпусе, находящемся между спальными корпусами и соединенными между собой теплыми переходами, для гостей санатория разработаны комплексные программы лечения и оздоровления взрослых и детей с применением общеукрепляющей терапии с использованием природно-климатических факторов Черноморского побережья Кавказа: климатотерапии, талассотерапии (солнечные и воздушные ванны в сочетании с морским купанием), аэротерапии, гелиотерапии, гидротерапии, все виды физиотерапии, включая низкочастотную, магнитолазерную, высокочастотную. Лечебная физкультура проводится как в зале ЛФК с тренажёрами, оснащенными электронными датчиками, так и в плавательном бассейне, по профильным группам.
+                p Лечение проводится по классическим, проверенным временем и апробированным в НИИ Курортологии, методикам утвержденным Минздравом России. Вся аппаратура и оборудование подобраны в таком составе, чтобы они были универсально применимы в соответствии с профилем здравницы. В здравнице имеется уникальное медоборудование для проведения лечения согласно последним научным достижениям.
+                p Магнитотерапевтическая установка «ЭОЛ» (магнитотурботрон) – воздействие переменным управляемым магнитным полем на организм человека. Улучшает состояние больных сахарным диабетом, бронхиальной астмой, заболеваниями сосудов, позвоночника, корректирует деятельность иммунной эндокринной, сердечно-сосудистой, нервной систем, заболевания органов пищеварения, психосоматические расстройства, кожные заболевания. Это единственный аппарат, применяемый в начальных стадиях онкологических заболеваний и для профилактики их.
+                h3 Медицинское отделение имеет следующие диагностические кабинеты
+                ul.object-description__dot
+                  li Электрокардиографии с компьютерным обеспечением обследования (одна из последних версий системы «Валента»). Клинико-биохимическая лаборатория для исследования крови и мочи на автоматических и полуавтоматических аппаратах с моментальной выдачей заключения. Ультразвуковая диагностика внутренних органов (УЗИ) включая сердце, сосудов шеи, верхних и нижних конечностей.
+                  li Медицинское отделение укомплектовано медперсоналом, имеющим сертификаты, высшие и 1-ой категории, кандидаты и доктора мед. наук. Своевременно проводится профессиональное обучение по специальностям. В штате – врачи терапевты-курортологи, физиотерапевты, кардиолог, педиатр, диетолог, гастроэнтеролог, уролог, гинеколог, иммунолог-аллерголог, ортопед-травматолог и др.
+                  li Успешно работает компьютерная программа «Меддиспетчер», которая позволяет распределять на процедуры в удобное пациенту время с выдачей ему индивидуального графика лечения на весь период пребывания в санатории, ежедневную информацию в каждый процедурный кабинет о предстоящих посетителях. Каждый врач с помощью персонального компьютера находящегося в каждом кабинете, владеет информацией о каждом своем пациенте и его лечении.
+                p Но есть спектр заболеваний, где для лечения требуется совсем иная дозировка и химический состав. Это, в первую очередь, заболевания сердечно-сосудистой системы, опорно-двигательного аппарата, кожные заболевания и гинекология. В этом случае гостям Санатория « Знание» помогут «огненные воды» другого полезного источника – <span>Мацесты</span>.
+                h3 Лечебная база
+                ul.object-description__dot
+                  li Сероводородные, мацестинские, йодобромные, фитосолиевые, бишофитные, жемчужные (пузырьковые), травяные, минеральные и вихревые ванны;
+                  li Массаж ручной классический зональный при заболеваниях опорно-двигательного аппарата или новый вид электро-механического массажа в эластическом псевдокипящем слое;
+                  li Массаж стоп, кистей, конечностей, позвоночника, таза;
+                  li Ингаляции паровые, масляные, с использованием экстрактов лечебных трав, ультразвуковые;
+                  li Современная диагностика акупунктурная по Фоллю, КВЧ - информационно-волновая терапия;
+                  li Медикаментозное лечение (по показаниям).
+                h3 Прием ведут
+                ul.object-description__dot
+                  li Терапевт;
+                  li Педиатр;
+                  li Стоматолог;
+                  li Психолог;
+                  li Уролог;
+                  li Кардиолог;
+        button.object-description__button.object-description__button--wide(type="button")
+          span Свернуть описание
