add object-infrastructure page

--- a/src/assets/styles/base/variables.scss
+++ b/src/assets/styles/base/variables.scss
@@ -53,6 +53,7 @@ $gray-500: #E8E8E8;
 $gray-600: #ACADAF;
 $gray-700: #FFFFFFA6;
 $gray-800: #64749A;
+$gray-850: #737982;
 $gray-900: #4B6AA6;
 
 $green-100: #2CC753;
