--- a/src/assets/styles/components/object/object-description.scss
+++ b/src/assets/styles/components/object/object-description.scss
@@ -120,6 +120,8 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
     li {
       display: flex;
       gap: 12px;
