--- a/src/views/components/object/object-about.pug
+++ b/src/views/components/object/object-about.pug
@@ -1,14 +1,22 @@
 .object-about
   .object-about__wrapper
-    .object-about__content
-      h2.object__title Описание <span>санатория «Знание»</span>
-      .object-about__text
-        p Санаторий «Знание» – крупнейшая здравница в г. Сочи, которой присвоена категория 3***. Санаторий располагается на первой береговой линии Черного моря, а оба спальных корпуса окружены вечнозеленым дендрологическим парком 8,5 га. Гости санатория считают, что неизменная составляющая нашего успеха - гостеприимство, улыбчивый персонал и высококвалифицированные специалисты.
-        p «Знание» - это не только лечение и оздоровление, но ещё и полноценный отдых и всевозможные развлечения на любой вкус и возраст. Уникальные природные факторы делают санаторий полноценной климато-грязевой бальнеологической здравницей.
-        p Высокий профессионализм, доброжелательность и забота персонала и высокий уровень сервиса помогут Вам восстановить здоровье, отдохнуть и получить заряд бодрости и прекрасное настроение.
-        p Наличие площадок вместимостью от 20 до 200 человек и мультимедиа- оборудования позволяют качественно проводить семинары, конференции, форумы как российского, так и международного уровня.
-        p Постоянные гости санатория знают, что даже несколько дней в Санатории «Знание» можно приравнять к настоящему отпуску, проведённому с пользой для души и тела. Медицинский и обслуживающий персонал сделает все, чтобы Ваш отдых был беззаботным, приятным, и Вам непременно захочется вернуться к нам снова.
-      button.object-about__button(type="button") Свернуть описание
+    .object-about__container
+      .object-about__content
+        h2.object__title Описание <span>санатория «Знание»</span>
+        .object-about__text
+          p Санаторий «Знание» – крупнейшая здравница в г. Сочи, которой присвоена категория 3***. Санаторий располагается на первой береговой линии Черного моря, а оба спальных корпуса окружены вечнозеленым дендрологическим парком 8,5 га. Гости санатория считают, что неизменная составляющая нашего успеха - гостеприимство, улыбчивый персонал и высококвалифицированные специалисты.
+          p «Знание» - это не только лечение и оздоровление, но ещё и полноценный отдых и всевозможные развлечения на любой вкус и возраст. Уникальные природные факторы делают санаторий полноценной климато-грязевой бальнеологической здравницей.
+          p Высокий профессионализм, доброжелательность и забота персонала и высокий уровень сервиса помогут Вам восстановить здоровье, отдохнуть и получить заряд бодрости и прекрасное настроение.
+          p Наличие площадок вместимостью от 20 до 200 человек и мультимедиа- оборудования позволяют качественно проводить семинары, конференции, форумы как российского, так и международного уровня.
+          p Постоянные гости санатория знают, что даже несколько дней в Санатории «Знание» можно приравнять к настоящему отпуску, проведённому с пользой для души и тела. Медицинский и обслуживающий персонал сделает все, чтобы Ваш отдых был беззаботным, приятным, и Вам непременно захочется вернуться к нам снова.
+        button.object-about__button(type="button") Свернуть описание
 
-    .object-about__video
-      <iframe width="406" height="280" src="https://www.youtube.com/embed/v08RpofHlx8?si=VcjZaB8hOX8CtWdj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      .object-about__video
+        <iframe width="406" height="280" src="https://www.youtube.com/embed/v08RpofHlx8?si=VcjZaB8hOX8CtWdj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    .object-about__nav
+      span Еще о санатории:
+      a(href="#") Фото
+      a(href="#") Видео
+      a(href="#") Карта-схема
+      a(href="#") Архив новогодней акции
+      a(href="#") Архив акций
