--- a/src/views/components/object/object-description-three.pug
+++ b/src/views/components/object/object-description-three.pug
@@ -1,6 +1,5 @@
 .object-description
   .object-description__wrapper
-    h2.object__title Инфраструктура <span>в санатории «Знание»</span>
     .object-description__container
       .object-description__blocks
         .object-description__block
@@ -55,10 +54,6 @@
                   svg(width="12" height="10" viewBox="0 0 12 10")
                     use(xlink:href="#svg-search-check")
                   span Детский городок;
-        .object-description__block
-          .object-description__content
-            .object-description__description
-              ul.object-description__approve
                 li
                   svg(width="12" height="10" viewBox="0 0 12 10")
                     use(xlink:href="#svg-search-check")
@@ -103,34 +98,79 @@
                   svg(width="12" height="10" viewBox="0 0 12 10")
                     use(xlink:href="#svg-search-check")
                   span Зал ЛФК;
+
+      .object-description-line
+        .object-description-line__images
+          .object-description-line__image.active(data-src="/assets/images/object/1.png")
+            img(src="/assets/images/object/1.png" alt="" loading="lazy")
+          .object-description-line__image(data-src="/assets/images/object/2.png")
+            img(src="/assets/images/object/1.png" alt="" loading="lazy")
+          .object-description-line__image(data-src="/assets/images/object/3.png")
+            img(src="/assets/images/object/1.png" alt="" loading="lazy")
+          .object-description-line__image(data-src="/assets/images/object/4.png")
+            img(src="/assets/images/object/1.png" alt="" loading="lazy")
+          .object-description-line__image(data-src="/assets/images/object/5.png")
+            img(src="/assets/images/object/1.png" alt="" loading="lazy")
+          .object-description-line__image(data-src="/assets/images/object/6.png")
+            img(src="/assets/images/object/1.png" alt="" loading="lazy")
+        .object-description-line__content
+          h3.object-description-line__title Крытый бассейн
+          .object-description-line__text Входит в стоимость. С подогреваемой, морской водой, оборудован, размером 20*15 метров. Время посещения: с 9:00 до 20:00. Четверг - санитарный день. Работает с 1 мая по 30 сентября. В зависимости от погодных условий период работы бассейна может меняться.
+          button.object-description-line__button(type="button") Развернуть описание
       
-      .object-description__blocks
-        .object-description__block
-          .object-description__content
-            h3 План-схема санатория Знание
-            .object-description__description
-              .object-description-scheme
-                .object-description-scheme__image.active(data-src="/assets/images/object/1.png")
-                  img(src="/assets/images/object/1.png" alt="" loading="lazy")
-                .object-description-scheme__image(data-src="/assets/images/object/2.png")
-                  img(src="/assets/images/object/2.png" alt="" loading="lazy")
-                .object-description-scheme__image(data-src="/assets/images/object/3.png")
-                  img(src="/assets/images/object/3.png" alt="" loading="lazy")
-                .object-description-scheme__image(data-src="/assets/images/object/4.png")
-                  img(src="/assets/images/object/4.png" alt="" loading="lazy")
-                .object-description-scheme__image(data-src="/assets/images/object/5.png")
-                  img(src="/assets/images/object/5.png" alt="" loading="lazy")
-                .object-description-scheme__image(data-src="/assets/images/object/6.png")
-                  img(src="/assets/images/object/6.png" alt="" loading="lazy")
-              a.object-description__link(href="#") Открыть схему крупнее
-        .object-description__block
-          .object-description__content
-            h3 Корпуса санатория Южное взморье
-            .object-description__description
-              ul.object-description__dot
-                li №5 - 2-этажный.
-                li Виллы - 3-этажные.
-                li №1 - 4-этажный, оборудован лифтом.
-                li №2 - 4-этажный, оборудован лифтом.
-                li №3 - 7-этажный, оборудован лифтом.
-                li №4 - 8-этажный, лечебный, оборудован лифтом.
+      .object-description-line
+        .object-description-line__images
+          .object-description-line__image.active(data-src="/assets/images/object/1.png")
+            img(src="/assets/images/object/1.png" alt="" loading="lazy")
+          .object-description-line__image(data-src="/assets/images/object/2.png")
+            img(src="/assets/images/object/1.png" alt="" loading="lazy")
+          .object-description-line__image(data-src="/assets/images/object/3.png")
+            img(src="/assets/images/object/1.png" alt="" loading="lazy")
+          .object-description-line__image(data-src="/assets/images/object/4.png")
+            img(src="/assets/images/object/1.png" alt="" loading="lazy")
+          .object-description-line__image(data-src="/assets/images/object/5.png")
+            img(src="/assets/images/object/1.png" alt="" loading="lazy")
+          .object-description-line__image(data-src="/assets/images/object/6.png")
+            img(src="/assets/images/object/1.png" alt="" loading="lazy")
+        .object-description-line__content
+          h3.object-description-line__title Открытый бассейн
+          .object-description-line__text Входит в стоимость. С подогреваемой, морской водой, оборудован, размером 20*15 метров. Время посещения: с 9:00 до 20:00
+          button.object-description-line__button(type="button") Развернуть описание
+      
+      .object-description-line
+        .object-description-line__images
+          .object-description-line__image.active(data-src="/assets/images/object/1.png")
+            img(src="/assets/images/object/1.png" alt="" loading="lazy")
+          .object-description-line__image(data-src="/assets/images/object/2.png")
+            img(src="/assets/images/object/1.png" alt="" loading="lazy")
+          .object-description-line__image(data-src="/assets/images/object/3.png")
+            img(src="/assets/images/object/1.png" alt="" loading="lazy")
+          .object-description-line__image(data-src="/assets/images/object/4.png")
+            img(src="/assets/images/object/1.png" alt="" loading="lazy")
+          .object-description-line__image(data-src="/assets/images/object/5.png")
+            img(src="/assets/images/object/1.png" alt="" loading="lazy")
+          .object-description-line__image(data-src="/assets/images/object/6.png")
+            img(src="/assets/images/object/1.png" alt="" loading="lazy")
+        .object-description-line__content
+          h3.object-description-line__title Конференц зал
+          .object-description-line__text Входит в стоимость. С подогреваемой, морской водой, оборудован, размером 20*15 метров. Время посещения: с 9:00 до 20:00. Четверг - санитарный день. Работает с 1 мая по 30 сентября. В зависимости от погодных условий период работы бассейна может меняться.
+          button.object-description-line__button(type="button") Развернуть описание
+      //- .object-description__blocks
+      //-   .object-description__block
+      //-     .object-description__content
+      //-       h3 План-схема санатория Знание
+      //-       .object-description__description
+      //-         .object-description-scheme
+      //-           .object-description-scheme__image.active(data-src="/assets/images/object/1.png")
+      //-             img(src="/assets/images/object/1.png" alt="" loading="lazy")
+      //-           .object-description-scheme__image(data-src="/assets/images/object/2.png")
+      //-             img(src="/assets/images/object/2.png" alt="" loading="lazy")
+      //-           .object-description-scheme__image(data-src="/assets/images/object/3.png")
+      //-             img(src="/assets/images/object/3.png" alt="" loading="lazy")
+      //-           .object-description-scheme__image(data-src="/assets/images/object/4.png")
+      //-             img(src="/assets/images/object/4.png" alt="" loading="lazy")
+      //-           .object-description-scheme__image(data-src="/assets/images/object/5.png")
+      //-             img(src="/assets/images/object/5.png" alt="" loading="lazy")
+      //-           .object-description-scheme__image(data-src="/assets/images/object/6.png")
+      //-             img(src="/assets/images/object/6.png" alt="" loading="lazy")
+      //-         a.object-description__link(href="#") Открыть схему крупнее
