--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -139,8 +139,7 @@
 @import "./components/object/object-no-available";
 @import "./components/object/object-sanatorium";
 @import "./components/object/object-treatment";
-
-
+@import "./components/object/object-infrastructure";
 
 @import "./components/object-booking/object-booking";
 @import "./components/object-booking/object-booking-sidebar";
