--- a/src/assets/styles/components/object/object-sidebar.scss
+++ b/src/assets/styles/components/object/object-sidebar.scss
@@ -5,6 +5,57 @@
     gap: 24px;
   }
 
+  &__img {
+    cursor: pointer;
+    margin-top: 20px;
+    width: 262px;
+    height: 180px;
+    overflow: hidden;
+    position: relative;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+    &:before {
+      z-index: 1;
+      position: absolute;
+      content: '';
+      width: 100%;
+      height: 100%;
+      inset: 0;
+      background-color: transparent;
+    }
+    @include min-screen(laptop) {
+      &:before {
+        transition: border-color $transition-default;
+      }
+      &:hover {
+        &:before {
+          background-color: rgba($black-600, 0.2);
+        }
+      }
+    }
+  }
+
+  &__link {
+    margin-top: 10px;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 18px;
+    color: $blue-500;
+    border-bottom: 1px dashed transparent;
+    &:active {
+      border-color: rgba($blue-500, 0.5);
+    }
+    @include min-screen(laptop) {
+      transition: border-color $transition-default;
+      &:hover {
+        border-color: rgba($blue-500, 0.5);
+      }
+    }
+  }
+
   &__blocks {
     background-color: $white;
     border-radius: 10px;
