--- a/src/assets/styles/components/object/object.scss
+++ b/src/assets/styles/components/object/object.scss
@@ -21,7 +21,7 @@
   }
 
   &__wrapper {
-    padding-bottom: 80px;
+    // padding-bottom: 80px;
     .attractions-information {
       margin-top: 10px;
       margin-bottom: 0;
