aff reviews page

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -140,6 +140,7 @@
 @import "./components/object/object-sanatorium";
 @import "./components/object/object-treatment";
 @import "./components/object/object-infrastructure";
+@import "./components/object/object-filter";
 
 @import "./components/object-booking/object-booking";
 @import "./components/object-booking/object-booking-sidebar";
