add object-location page

--- a/src/assets/styles/components/object/object.scss
+++ b/src/assets/styles/components/object/object.scss
@@ -39,6 +39,9 @@
       display: grid;
       margin-top: 24px;
     }
+    &--column {
+      grid-template-columns: 1fr;
+    }
   }
 
   &__link {
