--- a/src/views/pages/object-treatment.pug
+++ b/src/views/pages/object-treatment.pug
@@ -51,11 +51,11 @@ block content
             .object-description
               .object-description__wrapper
                 h2.object__title 76 отзывов <span>о санатории «Знание»</span>
-                  include ../components/object/object-rating
-                  include ../components/object/object-reviews
+                include ../components/object/object-rating
+                include ../components/object/object-reviews
           .object-description
             .object-description__wrapper
-              h2.object__title Расположение <span>санатория «Знание»</span>
-                include ../components/object/object-location
               include ../components/object/object-about
-          include ../components/object/object-faq
+    include ../components/object/object-faq
+    .object__slider
+      include ../components/attractions/attractions-sanatorium
