--- a/src/views/pages/object.pug
+++ b/src/views/pages/object.pug
@@ -40,8 +40,9 @@ block content
       .object__wrapper
         include ../components/attractions/attractions-information
         .object__reviews
-          .object-description__wrapper
-            h2.object__title 76 отзывов <span>о санатории «Знание»</span>
+          .object-description
+            .object-description__wrapper
+              h2.object__title 76 отзывов <span>о санатории «Знание»</span>
               include ../components/object/object-rating
               include ../components/object/object-reviews
         include ../components/object/object-about
