--- a/src/assets/styles/base/global.scss
+++ b/src/assets/styles/base/global.scss
@@ -58,6 +58,10 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Panton";
 }
 
+address {
+  font-style: normal;
+}
+
 .list {
   list-style-position: inside;
   display: flex;
