--- a/src/assets/styles/components/object/object-description.scss
+++ b/src/assets/styles/components/object/object-description.scss
@@ -10,6 +10,22 @@
     margin-top: 10px;
   }
 
+  &__name {
+    font-family: 'Panton';
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 20px;
+    color: $gray-400;
+  }
+
+  &__address {
+    font-family: 'Panton';
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 24px;
+    color: $black-400;
+  }
+
   &__button {
     padding: 11px 16px;
     background-color: $bg-blue;
