--- a/src/assets/styles/components/object/object-location.scss
+++ b/src/assets/styles/components/object/object-location.scss
@@ -1,82 +1,15 @@
 .object-location {
-  margin-top: 30px;
-  background-color: $white;
-  border-radius: 10px;
-  padding: 30px 24px;
+  background-color: $bg-blue;
 
-  &__title {
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 20px;
-    color: $gray-400;
+  &__block {
+    margin-top: 60px;
   }
-
-  &__adress {
-    margin-top: 10px;
-    font-family: 'Panton';
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 24px;
-    color: $black-400;
-  }
-
-  &__subtitle {
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 20px;
-    color: $black-400;
-  }
-
-  &__text {
-    margin-top: 10px;
-    padding-bottom: 30px;
-    border-bottom: 1px solid rgba($blue-700, 0.15);
-    p {
-      font-size: 16px;
-      font-weight: 400;
-      line-height: 20px;
-      color: $black-300;
-    }
-  }
-
-  &__list {
-    margin-top: 10px;
-    list-style-position: inside;
-    display: flex;
-    flex-direction: column;
-    gap: 2px;
-    li {
-      position: relative;
-      color: $black-400;
-      @include max-screen(tablet) {
-        font-size: 14px;
-        line-height: 20px;
-        padding-left: 16px;
-
-      }
-      @include min-screen(tablet-2x) {
-        font-size: 16px;
-        line-height: 24px;
-        padding-left: 18px;
-      }
-
-      &:before {
-        content: "";
-        border-radius: 50%;
-        background-color: $black-400;
-        position: absolute;
-        left: 0;
-        @include max-screen(tablet) {
-          width: 4px;
-          height: 4px;
-          top: 8px;
-        }
-        @include min-screen(tablet-2x) {
-          top: 9px;
-          width: 6px;
-          height: 6px;
-        }
-      }
+  .ymap-container {
+    width: 100%;
+    height: 400px;
+    #map-yandex {
+      height: 100%;
+      width: 100%;
     }
   }
 }
