update object page

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -28,7 +28,8 @@
 @import "./mixins/reviews-clients-card";
 @import "./mixins/attractions-types-card";
 @import "./mixins/excursion-card"; 
-@import "./mixins/search-card"; 
+@import "./mixins/search-card";
+@import "./mixins/object-room";
 
 /*
   Компоненты
