--- a/src/assets/styles/components/object/object-description.scss
+++ b/src/assets/styles/components/object/object-description.scss
@@ -10,6 +10,16 @@
     margin-top: 10px;
   }
 
+  &__img {
+    width: 930px;
+    height: 500px;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+
   &__name {
     font-family: 'Panton';
     font-size: 16px;
@@ -109,8 +119,20 @@
       line-height: 18px;
       color: $black-400;
     }
+    h5 {
+      font-family: 'Panton';
+      font-size: 18px;
+      font-weight: 700;
+      line-height: 24px;
+      color: $black-400;
+    }
     &--half {
       width: 50%;
+    }
+    &--border {
+      border: 1px solid rgba($blue-700, 0.15);
+      border-radius: 10px;
+      padding: 24px;
     }
   }
 
