add object-rooms page

--- a/src/views/components/object/object-room.pug
+++ b/src/views/components/object/object-room.pug
@@ -286,7 +286,7 @@
                   use(xlink:href="#svg-arrow-right")
               .swiper-pagination
           .object-room__information
-            h2.object-room__title Стандартный 2-местный DBL/TWIN доп. место ребенку до 12 лет квартал №14
+            h2.object-room__title Люкс 4-местный 3-комнатный
             .object-room__items
               .object-room__item
                 .object-room__name
