--- a/src/views/pages/object-rooms.pug
+++ b/src/views/pages/object-rooms.pug
@@ -20,9 +20,7 @@ block content
         .object__wrapper
           h2.object__title Номерной фонд <span>санатория «Знание»</span>
           .object__container.object__container--column
-            include ../mixins/object-room
-            
-
+            include ../components/object/object-room
           .object-treatment__block
             .object__blocks
               .object__block
