--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -29,7 +29,6 @@
 @import "./mixins/attractions-types-card";
 @import "./mixins/excursion-card"; 
 @import "./mixins/search-card";
-@import "./mixins/object-room";
 
 /*
   Компоненты
@@ -142,6 +141,7 @@
 @import "./components/object/object-treatment";
 @import "./components/object/object-infrastructure";
 @import "./components/object/object-filter";
+@import "./components/object/object-room";
 
 @import "./components/object-booking/object-booking";
 @import "./components/object-booking/object-booking-sidebar";
