update object page

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -142,6 +142,7 @@
 @import "./components/object/object-infrastructure";
 @import "./components/object/object-filter";
 @import "./components/object/object-room";
+@import "./components/object/object-promo";
 
 @import "./components/object-booking/object-booking";
 @import "./components/object-booking/object-booking-sidebar";
