--- a/src/views/components/object/object-room.pug
+++ b/src/views/components/object/object-room.pug
@@ -68,7 +68,7 @@
               svg(width="12" height="10" viewBox="0 0 12 10")
                 use(xlink:href="#svg-search-check")
               span Есть свободные
-            .object-room__button Забронировать
+            button.object-room__button(type="button") Забронировать
       
       .object-room__block
         .object-room__content
@@ -263,7 +263,7 @@
               svg(width="12" height="10" viewBox="0 0 12 10")
                 use(xlink:href="#svg-search-check")
               span Есть свободные
-            .object-room__button Забронировать
+            button.object-room__button(type="button") Забронировать
 
       .object-room__block
         .object-room__content
