update objects pages

--- a/src/views/components/object/object-promo.pug
+++ b/src/views/components/object/object-promo.pug
@@ -3,7 +3,7 @@
     .object-promo__blocks
       .object-promo__block
         .object-promo__img
-          img(src="/assets/images/object/1.png" alt="object" loading="lazy")
+          img(src="/assets/images/promo/2.png" alt="promo" loading="lazy")
         .object-promo__container
           .object-promo__content
             .object-promo__header
@@ -35,7 +35,7 @@
       
       .object-promo__block
         .object-promo__img
-          img(src="/assets/images/object/2.png" alt="object" loading="lazy")
+          img(src="/assets/images/promo/3.png" alt="promo" loading="lazy")
         .object-promo__container
           .object-promo__content
             .object-promo__header
@@ -67,7 +67,7 @@
 
       .object-promo__block
         .object-promo__img
-          img(src="/assets/images/object/3.png" alt="object" loading="lazy")
+          img(src="/assets/images/promo/4.png" alt="promo" loading="lazy")
         .object-promo__container
           .object-promo__content
             .object-promo__header
@@ -96,7 +96,7 @@
 
       .object-promo__block
         .object-promo__img
-          img(src="/assets/images/object/4.png" alt="object" loading="lazy")
+          img(src="/assets/images/promo/5.png" alt="promo" loading="lazy")
         .object-promo__container
           .object-promo__content
             .object-promo__header
@@ -125,7 +125,7 @@
       
       .object-promo__block
         .object-promo__img
-          img(src="/assets/images/object/5.png" alt="object" loading="lazy")
+          img(src="/assets/images/promo/6.png" alt="promo" loading="lazy")
         .object-promo__container
           .object-promo__content
             .object-promo__header
@@ -152,6 +152,6 @@
               button.object-promo__close(type="button") Свернуть
             button.object-promo__open(type="button") Подробное описание акции
     .object-promo__links
-      .object__link.object__link--blue
+      button.object__link.object__link--blue(type="button")
         span Показать еще номера
         .object__amount 3
