--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -143,6 +143,8 @@
 @import "./components/object/object-filter";
 @import "./components/object/object-room";
 @import "./components/object/object-promo";
+@import "./components/object/object-video";
+@import "./components/object/object-camera";
 
 @import "./components/object-booking/object-booking";
 @import "./components/object-booking/object-booking-sidebar";
