--- a/src/assets/styles/components/object/object-description.scss
+++ b/src/assets/styles/components/object/object-description.scss
@@ -182,6 +182,32 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+  }
+
+  &__item {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 20px;
+    color: $black-300;
+    padding-left: 18px;
+    position: relative;
+    &:before {
+      position: absolute;
+      content: '';
+      width: 6px;
+      height: 6px;
+      border-radius: 100px;
+      background-color: $black-400;
+      top: 6px;
+      left: 0;
+    }
+  }
+
+  &__circle {
+    margin-left: 12px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
     li {
       font-size: 16px;
       font-weight: 500;
@@ -198,6 +224,16 @@
         background-color: $black-400;
         top: 6px;
         left: 0;
+      }
+      &:after {
+        position: absolute;
+        content: '';
+        width: 2px;
+        height: 2px;
+        border-radius: 100px;
+        background-color: $white;
+        top: 8px;
+        left: 2px;
       }
     }
   }
