--- a/src/assets/styles/components/object/object-promo.scss
+++ b/src/assets/styles/components/object/object-promo.scss
@@ -7,19 +7,23 @@
 
   &__block {
     display: grid;
+    align-items: start;
     gap: 44px;
     grid-template-columns: 380px 1fr;
     padding: 30px 24px;
+    border-top: 1px solid rgba($blue-700, 0.15);
+    &:first-child {
+      border-top: none;
+    }
   }
 
   &__img {
     width: 380px;
-    max-height: 285px;
     height: auto;
     img {
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      object-fit: contain;
     }
   }
 
@@ -76,12 +80,6 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
-    h4 {
-      font-size: 16px;
-      font-weight: 700;
-      line-height: 20px;
-      color: $black-400;
-    }
     p {
       font-size: 16px;
       font-weight: 400;
@@ -95,6 +93,12 @@
 
   &__list {
     margin: 40px 0;
+    h4 {
+      font-size: 16px;
+      font-weight: 700;
+      line-height: 20px;
+      color: $black-400;
+    }
   }
 
   &__close,
@@ -144,7 +148,7 @@
   }
 
   &__links {
-    margin-top: 40px;
-    padding: 0 24px 24px 24px;
+    padding: 24px 24px 24px 24px;
+    border-top: 1px solid rgba($blue-700, 0.15);
   }
 }
