update object pages

--- a/src/assets/styles/components/object/object-camera.scss
+++ b/src/assets/styles/components/object/object-camera.scss
@@ -2,6 +2,7 @@
   margin-top: 30px;
   padding: 30px 24px;
   background-color: $white;
+  border-radius: 10px;
 
   &__blocks {
     display: grid;
