--- a/src/views/components/object/object-transfer.pug
+++ b/src/views/components/object/object-transfer.pug
@@ -1,13 +1,212 @@
 .object-transfer
   .object-transfer__wrapper
-    .object-transfer__icon
-      svg(width="48" height="48" viewBox="0 0 48 48")
-        use(xlink:href="#svg-flight")
-    .object-transfer__description
-      h4.object-transfer__title Авиабилеты и трансфер
-      p.object-transfer__text Авиабилеты и трансфер <span>не входят</span> в стоимость путевки, но наши менеджеры подберут и забронируют их для Вас дополнительно (без коммисий и переплат). Звоните по телефону:
-        a(href="tel:+7 800 333 41 99") 8 800 333 41 99
-    .object-transfer__links
-      a.object-transfer__link(href="#") Поиск авиабилетов
-      a.object__link.object__link--small(href="#")
-        span Стоимость трансфера
+    table.object-transfer__table
+      caption Цены на трансфер с <span>15.06.2024</span> по <span>19.09.2024</span>
+      thead
+        tr
+          th Название
+          th Откуда
+          th Стоимость
+          th Время в пути
+          th Расстояние
+      tbody
+        tr
+          td Стандарт
+          td Адлер а/п
+          td <span>1 200 ₽</span>
+          td 00:20:00
+          td 18 км.
+
+        tr
+          td Комфорт
+          td Адлер а/п
+          td <span>1 350 ₽</span>
+          td 00:20:00
+          td 18 км.
+
+        tr
+          td Минивэн
+          td Адлер а/п
+          td <span>1 800 ₽</span>
+          td 00:20:00
+          td 18 км.
+        
+        tr
+          td Стандарт
+          td Сочи
+          td <span>2 000 ₽</span>
+          td 00:50:00
+          td 32 км.
+        
+        tr
+          td Комфорт
+          td Сочи
+          td <span>2 200 ₽</span>
+          td 00:50:00
+          td 32 км.
+        
+        tr
+          td Минивэн
+          td Сочи
+          td <span>3 000 ₽</span>
+          td 00:50:00
+          td 32 км.
+
+    table.object-transfer__table
+      caption Цены на трансфер с <span>15.06.2024</span> по <span>19.09.2024</span>
+      thead
+        tr
+          th Название
+          th Откуда
+          th Стоимость
+          th Время в пути
+          th Расстояние
+      tbody
+        tr
+          td Стандарт
+          td Анапа а/п, ж/д
+          td <span>900 ₽</span>
+          td 00:30:00
+          td 25 км.
+
+        tr
+          td Комфорт
+          td Анапа а/п, ж/д
+          td <span>1 000 ₽</span>
+          td 00:30:00
+          td 25 км.
+
+        tr
+          td Стандарт
+          td Анапа ж/д Тоннельная
+          td <span>1 450 ₽</span>
+          td 00:40:00
+          td 35 км.
+        
+        tr
+          td Комфорт
+          td Анапа ж/д Тоннельная
+          td <span>1 500 ₽</span>
+          td 00:40:00
+          td 35 км.
+        
+        tr
+          td Стандарт
+          td Новороссийск
+          td <span>2 300 ₽</span>
+          td 01:00:00
+          td 65 км.
+        
+        tr
+          td Минивэн
+          td Новороссийск
+          td <span>3 500 ₽</span>
+          td 01:00:00
+          td 65 км.
+    
+    table.object-transfer__table
+      caption Цены на трансфер с <span>15.06.2024</span> по <span>19.09.2024</span>
+      thead
+        tr
+          th Название
+          th Откуда
+          th Стоимость
+          th Время в пути
+          th Расстояние
+      tbody
+        tr
+          td Стандарт
+          td Адлер а/п
+          td <span>1 200 ₽</span>
+          td 00:20:00
+          td 18 км.
+
+        tr
+          td Комфорт
+          td Адлер а/п
+          td <span>1 350 ₽</span>
+          td 00:20:00
+          td 18 км.
+
+        tr
+          td Минивэн
+          td Адлер а/п
+          td <span>1 800 ₽</span>
+          td 00:20:00
+          td 18 км.
+        
+        tr
+          td Стандарт
+          td Сочи
+          td <span>2 000 ₽</span>
+          td 00:50:00
+          td 32 км.
+        
+        tr
+          td Комфорт
+          td Сочи
+          td <span>2 200 ₽</span>
+          td 00:50:00
+          td 32 км.
+        
+        tr
+          td Минивэн
+          td Сочи
+          td <span>3 000 ₽</span>
+          td 00:50:00
+          td 32 км.
+    
+    table.object-transfer__table
+      caption Цены на трансфер с <span>15.06.2024</span> по <span>19.09.2024</span>
+      thead
+        tr
+          th Название
+          th Откуда
+          th Стоимость
+          th Время в пути
+          th Расстояние
+      tbody
+        tr
+          td Стандарт
+          td Анапа а/п, ж/д
+          td <span>900 ₽</span>
+          td 00:30:00
+          td 25 км.
+
+        tr
+          td Комфорт
+          td Анапа а/п, ж/д
+          td <span>1 000 ₽</span>
+          td 00:30:00
+          td 25 км.
+
+        tr
+          td Стандарт
+          td Анапа ж/д Тоннельная
+          td <span>1 450 ₽</span>
+          td 00:40:00
+          td 35 км.
+        
+        tr
+          td Комфорт
+          td Анапа ж/д Тоннельная
+          td <span>1 500 ₽</span>
+          td 00:40:00
+          td 35 км.
+        
+        tr
+          td Стандарт
+          td Новороссийск
+          td <span>2 300 ₽</span>
+          td 01:00:00
+          td 65 км.
+        
+        tr
+          td Минивэн
+          td Новороссийск
+          td <span>3 500 ₽</span>
+          td 01:00:00
+          td 65 км.
+    
+    .ymap-container
+      #map-yandex
