--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -145,6 +145,8 @@
 @import "./components/object/object-promo";
 @import "./components/object/object-video";
 @import "./components/object/object-camera";
+@import "./components/object/object-photo";
+@import "./components/object/object-transport";
 
 @import "./components/object-booking/object-booking";
 @import "./components/object-booking/object-booking-sidebar";
