--- a/src/assets/styles/components/object/object-gallery.scss
+++ b/src/assets/styles/components/object/object-gallery.scss
@@ -76,6 +76,11 @@
       width: 100%;
       height: 100%;
     }
+    &:active {
+      &:before {
+        background-color: rgba($black-600, 0.2);
+      }
+    }
     &:hover {
       &:before {
         background-color: rgba($black-600, 0.2);
