--- a/src/assets/styles/components/object/object-transfer.scss
+++ b/src/assets/styles/components/object/object-transfer.scss
@@ -1,76 +1,64 @@
 .object-transfer {
-  background-color: rgba($blue-700, 0.1);
+  background-color: $white;
   border-radius: 10px;
-  padding: 24px 30px;
-  
+  padding: 30px 24px;
+
   &__wrapper {
     display: flex;
-    align-items: center;
-    gap: 30px;
-  }
-
-  &__icon {
-    svg {
-      stroke: transparent;
-    }
-  }
-
-  &__title {  
-    font-size: 18px;
-    font-weight: 600;
-    line-height: 24px;
-    color: $black-400;
-  }
-
-  &__text {
-    margin-top: 10px;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 20px;
-    color: $black-300;
-    span {
-      font-weight: 700;
-    }
-    a {
-      font-size: 14px;
-      font-weight: 600;
-      line-height: 18px;
-      color: $blue-500;
-      margin-left: 5px;
-      @include min-screen(laptop) {
-        transition: color $transition-default;
-        &:hover {
-          color: $orange-500;
-        }
-      }
-    }
-  }
-
-  &__links {
-    display: flex;
     flex-direction: column;
-    align-items: center;
-    gap: 16px;
-    min-width: 220px;
+    gap: 40px;
   }
+  
+  &__table {
+    width: 100%;
+    caption {
+      text-align: left;
+      font-family: 'Panton';
+      font-size: 16px;
+      font-weight: 700;
+      line-height: 20px;
+      color: $black-300;
+      margin-bottom: 30px;
+      span {
+        border-bottom: 1px solid $black-300;
+      }
+    }
+    thead {
+      padding: 10px 12px;
+      background-color: rgba($blue-700, $alpha: 0.1);
+    }
 
-  &__link {
-    font-size: 18px;
-    font-weight: 600;
-    line-height: 18px;
-    color: $blue-500;
-    padding: 17px 29px;
-    background-color: $white;
-    border-radius: 8px;
-    transition: color $transition-default;
-    @include min-screen(laptop) {
-      &:hover {
-        color: $orange-500;
+    tr {
+    }
+
+    th,
+    td {
+      padding: 10px 12px;
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 20px;
+      text-align: left;
+    }
+
+    th {
+      color: $gray-400;
+    }
+
+    td {
+      color: $black-400;
+      border-bottom: 1px solid rgba($blue-700, $alpha: 0.15);
+      span {
+        font-weight: 600;
       }
     }
   }
 
-  .object__link {
-    margin-top: 0;
+  .ymap-container {
+    width: 100%;
+    height: 400px;
+    #map-yandex {
+      height: 100%;
+      width: 100%;
+    }
   }
 }
